[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/PlayerBullet.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerBullet.gd" type="Script" id=2]
[ext_resource path="res://Explosion/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.23469
height = 9.65461

[node name="PlayerBullet" type="Area2D"]
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
